--- a/app/src/main/res/drawable/input_design.xml
+++ b/app/src/main/res/drawable/input_design.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="@color/purple"
+        android:color="#473028"
         android:width="3dp"></stroke>
 
     <corners
