--- a/app/src/main/res/layout/activity_m_a6.xml
+++ b/app/src/main/res/layout/activity_m_a6.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MA6"
-    android:background="@drawable/dog1">
+    tools:context=".MA6">
 
 
     <EditText
         android:id="@+id/editTextTextPersonName6"
-        android:layout_width="237dp"
-        android:layout_height="49dp"
+        android:layout_width="297dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="Enter Username"
         android:inputType="textPersonName"
@@ -20,10 +19,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.229"
+        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.642" />
+        app:layout_constraintVertical_bias="0.63" />
 
     <ImageView
         android:layout_width="282dp"
@@ -38,8 +37,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="310dp"
-        android:layout_height="56dp"
+        android:layout_width="297dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textPersonName"
@@ -48,18 +47,19 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.356"
+        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.378" />
+        app:layout_constraintVertical_bias="0.381" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register with us"
-        android:textColor="@color/design_default_color_primary_dark"
-        android:textSize="24sp"
+        android:fontFamily="@font/alegreya_bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.425"
@@ -71,19 +71,21 @@
         android:id="@+id/button"
         android:layout_width="81dp"
         android:layout_height="32dp"
-        android:background="@android:color/holo_green_light"
         android:onClick="openLogin"
         android:text="Log in"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.924"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.145" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="288dp"
+        android:layout_width="297dp"
         android:layout_height="46dp"
         android:ems="10"
         android:hint="Enter Full Name"
@@ -101,7 +103,7 @@
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="297dp"
-        android:layout_height="54dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="Enter Phone Number"
         android:inputType="number"
@@ -110,15 +112,15 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="252dp"
-        android:layout_height="48dp"
+        android:layout_width="297dp"
+        android:layout_height="46dp"
         android:ems="10"
         android:hint="Enter Password"
         android:inputType="textPassword"
@@ -127,23 +129,25 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintHorizontal_bias="0.298"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.779" />
+        app:layout_constraintVertical_bias="0.763" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="126dp"
         android:layout_height="47dp"
-        android:background="@android:color/holo_green_light"
         android:text="Register"
+        android:textColor="@color/white"
+        android:textStyle="bold|italic"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.971" />
+        app:layout_constraintVertical_bias="0.903" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
