--- a/app/src/main/res/layout/activity_quote.xml
+++ b/app/src/main/res/layout/activity_quote.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="96dp"
         android:background="#486A341E"
-        android:fontFamily="@font/halant"
+        android:fontFamily="@font/alegreya_bold"
         android:freezesText="false"
         android:text="@string/special_request"
         android:textAlignment="center"
@@ -72,30 +72,31 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageButton6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <ImageButton
         android:id="@+id/imageButton6"
-        android:layout_width="46dp"
-        android:layout_height="53dp"
+        android:layout_width="50dp"
+        android:layout_height="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView21"
-        app:srcCompat="@drawable/facebook1" />
+        app:srcCompat="@drawable/faceook" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="65dp"
-        android:layout_height="66dp"
+        android:layout_width="57dp"
+        android:layout_height="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageButton6"
         app:layout_constraintTop_toBottomOf="@+id/textView21"
+        app:layout_constraintVertical_bias="0.517"
         app:srcCompat="@drawable/twit1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
