--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -15,25 +15,41 @@
         android:text="@string/contact_us"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
+        android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062" />
+
+    <EditText
+        android:id="@+id/etinputFname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etinputLname"
+        android:layout_marginTop="20dp"
+        android:hint="@string/hintFname"
+        android:inputType="text"
+        android:padding="12dp"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <EditText
         android:id="@+id/etinputLname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/etinputPhone"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="56dp"
         android:hint="@string/hintLname"
         android:inputType="text"
         android:padding="12dp"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintTop_toTopOf="@+id/etinputFname"
+        tools:layout_editor_absoluteX="0dp" />
 
     <EditText
         android:id="@+id/etinputPhone"
@@ -98,22 +114,19 @@
         android:background="@color/colorPrimaryDark"
         android:text="@string/SentB"
         android:textColor="#FFFFFF"
-        android:textSize="18dp"
-        android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etinputMsg"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.173" />
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="398dp"
-        android:layout_height="237dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="383dp"
+        android:layout_height="212dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:srcCompat="@drawable/contactus" />
