--- a/app/src/main/res/layout/activity_m_a1.xml
+++ b/app/src/main/res/layout/activity_m_a1.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/chela_one"
-        android:text="Hi!"
+        android:text="@string/greeting"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
         android:layout_width="225dp"
         android:layout_height="113dp"
         android:fontFamily="@font/alegreya_bold"
-        android:text="Your account has been successfully created"
+        android:text="@string/msg"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
